Project

General

Profile

Actions

Bug #40211

closed

mds: fix corner case of replaying open sessions

Added by Zheng Yan almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Marking a session dirty may flush all existing dirty sessions. MDS
calls Server::finish_force_open_sessions() for log event that opens
multiple sessions. The function marks sessions dirty one by one. So
sessions opened by a log event may get flushed partially.

When replaying a log event that opens multiple sessions, mds need to
check if some of these sessions have already been flushed.


Related issues 3 (0 open3 closed)

Copied to CephFS - Backport #40342: mimic: mds: fix corner case of replaying open sessionsResolvedZheng YanActions
Copied to CephFS - Backport #40343: luminous: mds: fix corner case of replaying open sessionsResolvedZheng YanActions
Copied to CephFS - Backport #40344: nautilus: mds: fix corner case of replaying open sessionsResolvedZheng YanActions
Actions #1

Updated by Zheng Yan almost 5 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 28456
Actions #2

Updated by Patrick Donnelly almost 5 years ago

  • Assignee set to Zheng Yan
  • Target version set to v15.0.0
  • Start date deleted (06/08/2019)
  • Source set to Development
  • Backport set to nautilus,mimic,luminous
  • Component(FS) MDS added
Actions #3

Updated by Patrick Donnelly almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Patrick Donnelly almost 5 years ago

  • Copied to Backport #40342: mimic: mds: fix corner case of replaying open sessions added
Actions #5

Updated by Patrick Donnelly almost 5 years ago

  • Copied to Backport #40343: luminous: mds: fix corner case of replaying open sessions added
Actions #6

Updated by Patrick Donnelly almost 5 years ago

  • Copied to Backport #40344: nautilus: mds: fix corner case of replaying open sessions added
Actions #7

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF