mds: fix corner case of replaying open sessions

Marking a session dirty may flush all existing dirty sessions. MDS
calls Server::finish_force_open_sessions() for log event that opens
multiple sessions. The function marks sessions dirty one by one. So
sessions opened by a log event may get flushed partially.

When replaying a log event that opens multiple sessions, mds need to
check if some of these sessions have already been flushed.

Fixes: https://tracker.ceph.com/issues/40211
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit 8e0ddc9808bf2d21180f9f4f78eafafdb4670262)